<resources>
    <string name="app_name">Marvel Verse</string>
    <!--Splash Screen-->
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="marvel_logo">Marvel logo</string>

    <!-- master fragment-->
    <string name="marvel_character_image">Marvel character image</string>
    <string name="title_master_fragment">Items</string>
    <string name="thumbnail">thumbnail</string>
    <string name="master_fragment_title">Marvel Verse</string>
    <string name="loading_marvel_characters">Loading marvel characters …</string>
    <string name="error_loading_marvel_characters">Whoops! Something went wrong here.</string>
    <string name="no_character">If we don\'t find this character here, he\'s probably dead.</string>

    <!-- details fragment-->
    <string name="title_detail_fragment">Item Detail</string>
    <string name="fab_button">favorites floating button</string>
    <string name="description_label">Description</string>
    <string name="fake_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="not_available">N/A</string>
    <string name="details_fragment_title">Character details</string>
    <string name="search">search</string>

    <!-- favorites fragment-->
    <string name="title_favorites_fragment">Favorites</string>
    <string name="favorites">Favorites</string>
    <string name="thanos_glove">Thanos glove</string>
    <string name="no_fav_characters">There\'s nobody here!</string>

</resources>
